--- a/PixelBlaster/.classpath
+++ b/PixelBlaster/.classpath
@@ -7,6 +7,6 @@
 			<accessrule kind="nonaccessible" pattern="java/awt/**"/>
 		</accessrules>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Slick2d"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/Slick2d"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
