Refactor to StateBasedGame, added terrain tiles
Realized Slick2d has it's own game state handling system, refactored to
use it instead (includes nifty transitions)

--- a/PixelBlaster/.classpath
+++ b/PixelBlaster/.classpath
@@ -8,5 +8,6 @@
 		</accessrules>
 	</classpathentry>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/Slick2d"/>
+	<classpathentry kind="lib" path="lib/jbox2d-library-2.1.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
