--- a/PixelBlaster/.classpath
+++ b/PixelBlaster/.classpath
@@ -2,11 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="assets"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
-		<accessrules>
-			<accessrule kind="nonaccessible" pattern="java/awt/**"/>
-		</accessrules>
-	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/Slick2d"/>
 	<classpathentry kind="lib" path="lib/jbox2d/slf4j-simple-1.7.12.jar"/>
 	<classpathentry kind="lib" path="lib/jbox2d/jbox2d-library-2.2.1.1.jar" sourcepath="lib/jbox2d/src-jbox2d-2.2.1.1"/>
